--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Oswald:300,400,500'>
 <link rel="stylesheet" href="./style.css">
+<link rel="shortcut icon" type="image/jpg" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT8GIMAuCz1bEc367hP487OMxgeD8F7BV5A2XYorqXKbvIVrHo4rt_xCw1Ehvl032UXWUA&usqp=CAU"/>
 <script src="new.js"></script>
 
 </head>
